--- a/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
@@ -12,7 +12,10 @@ Du hast zwei Möglichkeiten, die Katalogdaten manuell zu exportieren:
 
 | Live-Download
 | Die Datei wird automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit verfolgen. +
-*_Aber:_* Das Browser-Tab und das plentymarkets Tab *Datenexport* dürfen nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export gestoppt.
+*_Aber:_*
+
+* Das Browser-Tab und das plentymarkets Tab *Datenexport* dürfen nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export gestoppt.
+* Bei großen Datenmengen kann es zu einer Zeitüberschreitung kommen. Der Download wird dann abgebrochen. Verwende bei großen Datenmengen oder einer Zeitüberschreitung stattdessen den asynchronen Download.
 |===
 
 [tabs]
@@ -53,6 +56,7 @@ Beim Live-Download wird die Datei erstellt und auch gleich automatisch auf deine
 
 * Wenn du den Live-Download startest, wird ein neues Browser-Tab geöffnet. In diesem Browser-Tab wird das plentymarkets Tab *Datenexport* angezeigt. Während der Export läuft, dürfen das Browser-Tab und das plentymarkets Tab *Datenexport* nicht geschlossen oder neu geladen werden. Wenn du es doch tust, wird der Export angehalten.
 * Du kannst Live-Download mehrerer Kataloge gleichzeitig durchführen. Einen neuen Live-Download für denselben Katalog kannst du aber erst starten, wenn der laufende Export abgeschlossen ist.
+* Bei großen Datenmengen kann es zu einer Zeitüberschreitung kommen. Der Download wird dann abgebrochen. Verwende bei großen Datenmengen oder einer Zeitüberschreitung stattdessen den asynchronen Download.
 
 [.instruction]
 Live-Download starten:
