--- a/docs/en-gb/modules/data/pages/formatdesigner-contacts.adoc
+++ b/docs/en-gb/modules/data/pages/formatdesigner-contacts.adoc
@@ -173,6 +173,9 @@ Use formats of the type *Contacts* to export contact data, address data and comp
 |====
 |Field |Explanation
 
+|anonymizedAt
+|Date and time when the contact was anonymised.
+
 |birthdayAt
 |Birthday of the contact
 
@@ -185,6 +188,9 @@ Possible values: 0 = not blocked, 1 = blocked.
 
 |classId
 |Customer class ID
+
+|createdAt
+|Date and time when the contact was created.
 
 |dhlPostIdent
 |DHL PostIdent of the contact
@@ -257,6 +263,9 @@ Possible values: 0 = not blocked, 1 = blocked.
 
 |typeId
 |Contact type ID
+
+|updatedAt
+|Date and time when the contact data record was last updated.
 
 |userId
 |Owner ID of the contact
