--- a/docs/de-de/modules/maerkte/pages/google-shopping.adoc
+++ b/docs/de-de/modules/maerkte/pages/google-shopping.adoc
@@ -8,6 +8,8 @@
 :plugin-name: Google Shopping
 :plugin-link: https://marketplace.plentymarkets.com/plugins/channels/preisportale/elasticexportgoogleshopping_4722
 
+:google-shopping:
+
 include::partial$plugin-download.adoc[]
 
 [#100]
@@ -81,10 +83,10 @@ include::maerkte:partial$exportdatei-herunterladen.adoc[]
 |Der Name der *Artikelverfügbarkeit* unter *Einrichtung » Artikel » Verfügbarkeit* oder die Übersetzung gemäß der Formateinstellung *Artikelverfügbarkeit überschreiben*.
 
 |price
-|Der *Verkaufspreis*.
+|Der reguläre *Verkaufspreis* ohne Preistyp.
 
 |sale_price
-|Der *Angebotspreis* abhängig der Formateinstellung *Angebotspreis*.
+|Ein Preis vom Typ *Aktionspreis*, abhängig von der Formateinstellung *Angebotspreis*. Der sale_price wird in der Exportdatei nur ausgegeben, wenn er niedriger ist als der *Verkaufspreis*.
 
 |brand
 |Der *Name des Herstellers* des Artikels. Der *Externe Name* unter *Einrichtung » Artikel » Hersteller* wird bevorzugt, wenn vorhanden.
