--- a/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-market-assistant.adoc
@@ -90,11 +90,22 @@ endif::conrad,voelkner[]
 2+^| Schritt *Lagerauswahl*
 
 | Lagerauswahl
-| Wähle das Lager, das für den Bestandsexport verwendet werden soll. Bestände aus dem gewählten plentymarkets Lager werden an {market} übertragen.
+| Aus welchen Lagern soll Bestand an {market} exportiert werden? +
+
+. Wähle ein *Lager* aus der Dropdown-Liste, das für den Bestandsexport verwendet werden soll. +
 ifdef::voelkner[]
-Gib für jedes Versandlager, aus dem Ware versendet wird, die Adresse im folgenden Format ein: +
+. Gib in der Dropdown-Liste *Adresse des Versandlagers* die Adresse des Lagers im folgenden Format ein: +
 `Name des Versandlagers, Teststraße 1, 12345 Musterstadt`
 endif::voelkner[]
+ifdef::conrad[]
+*_Wichtig:_* Die Adressdaten des Lagers müssen in deinem Conrad-Backend gespeichert sein.
+. Gib in das Feld *Adresse des Versandlagers* die ID des Lagers ein, die dieses Lager in deinem Conrad-Backend hat. +
+*_Tipp:_* Du kannst im Conrad-Backend bis zu 5 Lager speichern.
+endif::conrad[]
+. *_Optional:_* Um weitere Lager hinzuzufügen:
+  .. Klicke auf das Plus.
+  .. Wähle ein weiteres *Lager* aus der Dropdown-Liste. +
+  → Der Bestand der Lager wird addiert.
 
 2+^| Schritt *Zuordnung des Versandprofils*
 
