--- a/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
@@ -90,11 +90,22 @@ endif::conrad,voelkner[]
 2+^| Step *Warehouse selection*
 
 | Warehouse selection
-| Select the warehouse you want to use for stock export. Stock from the selected warehouse in plentymarkets is exported to {market}.
+| Select from what warehouse or warehouses stock is to be exported to {market}. +
+
+. Select a *warehouse* from the drop-down list. The stock of this warehouse is exported. +
 ifdef::voelkner[]
-For each warehouse, enter the address in the following format: +
+. In the drop-down list *Address of warehouse*, enter the warehouse address in the following format: +
 `Name of the warehouse, Any Street 1, 12345 Any Town`
 endif::voelkner[]
+ifdef::conrad[]
+*_Important:_* Address data for the warehouse must have been saved in your Conrad back end.
+. In the field *Address of warehouse*, enter the ID of this warehouse in your Conrad back end. +
+*_Tip:_* You can save up to 5 warehouses in the Conrad back end.
+endif::conrad[]
+. *_Optional:_* To add additional warehouses:
+  .. Click on the plus sign.
+  .. Select another *warehouse* from the drop-down list. +
+  → The stock of all warehouses is added up.
 
 2+^| Step *Shipping profile mapping*
 
@@ -170,7 +181,7 @@ Variations without stock limitation are variations with the setting *Limitation*
 * *None*
 * *Do not administer stock for this variation*
 
-You can find this setting in the menu *Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Drop-down list: Limitation]*. This setting is valid for all sales channels, not just for {market}.
+You can find this setting in the menu xref:item:import-export-create-directory.html#intable-limitation, Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Drop-down list: Limitation]. This setting is valid for all sales channels, not just for {market}.
 
 |======
 --
