--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -706,18 +706,18 @@ include::partial$import-live-import.adoc[]
 [#1645]
 === Import abbrechen
 
-Im Menü *Daten » Status* kannst du einen gestarteten Import abbrechen. Die Funktion ist also nur verfügbar, wenn der Import gerade läuft.
+Du kannst einen gestarteten Import abbrechen. Die Funktion ist nur verfügbar, wenn der Import gerade läuft.
 
 *_Wichtig:_* Wenn du einen laufenden Import abbrichst, werden schon importierte Datensätze nicht gelöscht. Lösche diese Datensätze wenn nötig selbst.
 
 [tabs]
 ====
-Asynchronen Import abbrechen::
+Import abbrechen::
 +
 --
 
 [.instruction]
-Asynchronen Import abbrechen:
+Import abbrechen:
 
 . Öffne das Menü *Daten » Status*. +
 → Die Status-Übersicht wird geöffnet. +
