--- a/docs/en-gb/modules/data/pages/ElasticSync.adoc
+++ b/docs/en-gb/modules/data/pages/ElasticSync.adoc
@@ -301,7 +301,7 @@ Mappings allow you to specify which columns of your file are imported to which p
 [.collapseBox]
 .What is a source?
 --
-In CSV files, each column is a source. TXT files are structured differently. However, it's easier to also imagine the data in TXT files as columns.
+In CSV files, each column is a source. TXT files are structured differently. However, it makes it easier to also imagine the data they contain as columns.
 --
 
 [#8448399216]
@@ -706,18 +706,18 @@ include::partial$import-live-import.adoc[]
 [#1645]
 === Cancelling an import
 
-In the menu *Data » Status*, you can cancel an import that has already started. That means that this function is only available while the import is being processed.
+You can stop an import that you started. This function is only available while the import is being processed.
 
-*_Important:_* When you cancel a running import, the records that were already imported are not deleted. If necessary, delete these records yourself.
+*_Important:_* When you cancel a running import, the records that were already imported are not deleted. If necessary, delete this data yourself.
 
 [tabs]
 ====
-Cancelling an asynchronous import::
+Cancelling an import::
 +
 --
 
 [.instruction]
-Cancelling an asynchronous import:
+Cancelling an import:
 
 . Go to *Data » Status*. +
 → The status overview opens. +
