--- a/docs/de-de/modules/daten/partials/import-live-import.adoc
+++ b/docs/de-de/modules/daten/partials/import-live-import.adoc
@@ -7,37 +7,39 @@ Du hast zwei Möglichkeiten, die Datei zu importieren:
 
 [cols="1,3a"]
 |===
-| Asynchroner Import
+| Import (icon:play_circle_filled[role="blue"])
 | Der Import läuft im Hintergrund.
 
 * *_Vorteil:_* Du kannst auch große Datenmengen importieren. +
 * *_Nachteil:_* Du kannst den Fortschritt nicht live verfolgen.
 
-| Live-Import
-| Der Import wird live angezeigt.
+| Live-Import (icon:play_circle[role="blue"])
+| Der Import wird sofort gestartet. Der Fortschritt wird live angezeigt.
 
-* *_Vorteil:_* Du kannst den Fortschritt des Import in Echtzeit verfolgen.
+* *_Vorteile:_*
+  ** Du kannst den Fortschritt des Import in Echtzeit verfolgen.
+  ** Ergebnis und Fehler des Imports werden direkt unter dem Fortschrittsbalken angezeigt.
 * *_Nachteile:_*
-  ** Bei großen Datenmengen kann es zu einer Zeitüberschreitung kommen. Der Import wird dann abgebrochen. Verwende in diesem Fall stattdessen den asynchronen Import.
+  ** Bei großen Datenmengen kann es zu einer Zeitüberschreitung kommen. Der Import wird dann abgebrochen. Verwende in diesem Fall stattdessen den Import im Hintergrund.
   ** Das Browser-Tab und das plentymarkets Tab *Datenimport* dürfen nicht geschlossen oder neu geladen werden, während der Import läuft. Wenn du es doch tust, wird der Import gestoppt.
 
 |===
 
 [tabs]
 ====
-Asynchronen Import starten::
+Import starten::
 +
 --
 
 //tag::async-import[]
-Beim asynchronen Import läuft der Import im Hintergrund.
+Der Import läuft im Hintergrund.
 
 [.instruction]
-Asynchronen Import starten:
+Import starten:
 
 . Öffne das Menü *Daten » Import » [Import öffnen]*.
-. Klicke in der Symbolleiste auf *Import ausführen* (icon:play-circle[role="grey"]). +
-*_Tipp:_* Noch schneller geht es, wenn du in der Zeile des Imports in der Importübersicht auf *Import ausführen* (icon:play-circle[role="grey"]) klickst. +
+. Klicke in der Symbolleiste auf *Import ausführen* (material:play_circle[role="blue"]). +
+*_Tipp:_* Noch schneller geht es, wenn du in der Importübersicht in der Zeile des Imports auf *Import ausführen* (material:play-circle[role="grey"]) klickst. +
 → Die Daten werden importiert. +
 *_Wichtig:_* Der Import läuft im Hintergrund.
 . Öffne das Menü, in das die Daten importiert wurden.
@@ -57,13 +59,14 @@ Beim Live-Import kannst du den Fortschritt des Import in Echtzeit im Tab *Dateni
 *_Wichtig:_*
 
 * Wenn du den Live-Import startest, wird ein neues Browser-Tab geöffnet. In diesem Browser-Tab wird das plentymarkets Tab *Datenimport* angezeigt. Während der Import läuft, dürfen das Browser-Tab und das plentymarkets Tab *Datenimport* nicht geschlossen oder neu geladen werden. Wenn du es doch tust, wird der Import angehalten.
-* Bei großen Datenmengen kann es zu einer Zeitüberschreitung kommen. Der Import wird dann abgebrochen. Verwende in diesem Fall stattdessen den asynchronen Import.
+* Bei großen Datenmengen kann es zu einer Zeitüberschreitung kommen. Der Import wird dann abgebrochen. Verwende in diesem Fall stattdessen den Import im Hintergrund.
 
 [.instruction]
 Live-Import starten:
 
 . Öffne das Menü *Daten » Import » [Import öffnen]*.
-. Klicke in der Symbolleiste auf *Live-Import ausführen* (icon:play-circle[role="grey"]). +
+. Klicke in der Symbolleiste auf *Live-Import ausführen* (material:play_circle_outline[role="blue"]). +
+*_Tipp:_* Noch schneller geht es, wenn du in der Importübersicht in der Zeile des Imports auf *Live-Import ausführen* (terra:play_circle_outline[role="grey"]) klickst. +
 → Ein neues Browser-Tab wird geöffnet. plentymarkets und das Tab *Datenimport* werden angezeigt. +
 *_Kein neues Tab?_* Dann hast du wahrscheinlich einen Pop-up-Blocker im Einsatz. Erlaube Pop-ups für dein System und es kann losgehen. +
 → Die Daten werden importiert. +
