--- a/docs/en-gb/modules/data/partials/import-live-import.adoc
+++ b/docs/en-gb/modules/data/partials/import-live-import.adoc
@@ -7,37 +7,39 @@ There are two ways to import the file:
 
 [cols="1,3a"]
 |===
-| Asynchronous import
+| Import (icon:play_circle_filled[role="blue"])
 | The import runs in the background.
 
 * *_Advantage:_* You can import large amounts of data. +
 * *_Disadvantage:_* You cannot track the progress live.
 
-| Live import
-| The import progress is shown in real time.
+| Live import (icon:play_circle[role="blue"])
+| The import starts immediately. The progress is shown in real time.
 
-* *_Advantage:_* You can follow the import progress in real time.
+* *_Advantages:_*
+  ** You can follow the import progress in real time.
+  ** Results and any errors are shown directly underneath the progress bar.
 * *_Disadvantages:_*
-  ** The import can run into a timeout if you try to import large amounts of data. If that happens, the import is cancelled. In such cases, use the asynchronous import instead.
+  ** The import can run into a timeout if you try to import large amounts of data. If that happens, the import is cancelled. In such cases, use the background import instead.
   ** Do not close or reload the browser tab or the plentymarkets tab *Data import* while the import is in progress. If you do so, the import will be cancelled.
 
 |===
 
 [tabs]
 ====
-Starting an asynchronous import::
+Starting an import::
 +
 --
 
 //tag::async-import[]
-For asynchronous imports, the import runs in the background.
+The import runs in the background.
 
 [.instruction]
-Starting an asynchronous import:
+Starting an import:
 
 . Go to *Data » Import » [Open import]*.
-. In the toolbar, click on *Run import* (icon:play-circle[role="grey"]). +
-*_Tip:_* Even quicker: In the import overview, find the row of the import and click on *Run import* (icon:play-circle[role="grey"]). +
+. In the toolbar, click on *Run import* (icon:play-circle[role="blue"]). +
+*_Tip:_* Even quicker: In the import overview, find the import and click on *Run import* (icon:play-circle[role="grey"]) on the right. +
 → The data is imported. +
 *_Important:_* The import runs in the background.
 . Open the menu that the data was imported to.
@@ -57,13 +59,14 @@ The live import allows you to see the import progress in real time in the tab *D
 *_Important:_*
 
 * When you start the live import, a new browser tab opens. In this browser tab, the plentymarkets tab *Data import* is shown. Do not close or reload the browser tab and the plentymarkets tab *Data import* while the import is in progress. If you do, the import stops and is cancelled.
-* The import can run into a timeout if you try to import large amounts of data. If that happens, the import is cancelled. In such cases, use the asynchronous import instead.
+* The import can run into a timeout if you try to import large amounts of data. If that happens, the import is cancelled. In such cases, use the background import instead.
 
 [.instruction]
 Starting a live import:
 
 . Go to *Data » Import » [Open import]*.
-. In the toolbar, click on *Run live import* (icon:play-circle[role="grey"]). +
+. In the toolbar, click on *Run live import* (icon:play-circle_outline[role="grey"]). +
+*_Tip:_* Even quicker: In the import overview, find the import and click on *Run import* (icon:play-circle_outline[role="grey"]) on the right. +
 → a new browser tab opens. plentymarkets and the tab *Data import* are shown. +
 *_No new tab?_* Then you are probably using a pop-up blocker. Allow pop-ups for your system to continue. +
 → The data is imported. +
