Kathrin/new live import (#1263)
* push

* Create import-live-import.adoc

* push

--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -701,24 +701,20 @@ Import testen:
 [#import-manual]
 === Import manuell ausführen
 
-Wenn du in den Importeinstellungen ein Intervall festgelegt hast, wird die Datei automatisch regelmäßig importiert. Du kannst den Import aber auch jederzeit manuell starten.
-
-[.instruction]
-Import manuell ausführen:
-
-. Öffne das Menü *Daten » Import » [Import öffnen]*.
-. Klicke in der Symbolleiste auf *Import ausführen* (icon:play-circle[role="grey"]). +
-→ Die Daten werden importiert.
-. Öffne das Menü, in das die Daten importiert wurden.
-. Prüfe, ob die Daten wie erwartet importiert wurden.
+include::partial$import-live-import.adoc[]
 
 [#1645]
 === Import abbrechen
 
-Im Menü *Daten » Status* kannst du einen gestarteten Import abbrechen. Die Funktion ist also nur verfügbar, wenn der Import gerade läuft.
+Du kannst einen gestarteten Import abbrechen. Die Funktion ist nur verfügbar, wenn der Import gerade läuft.
 
-*_Wichtig:_* Wenn du einen laufenden Import abbrichst, werden schon importierte Datensätze nicht gelöscht. Diese Datensätze musst du also wenn nötig selbst löschen.
+*_Wichtig:_* Wenn du einen laufenden Import abbrichst, werden schon importierte Datensätze nicht gelöscht. Lösche diese Datensätze wenn nötig selbst.
 
+[tabs]
+====
+Import abbrechen::
++
+--
 
 [.instruction]
 Import abbrechen:
@@ -730,6 +726,21 @@ Import abbrechen:
 . Klicke auf *Import abbrechen*. +
 → Der Import wird abgebrochen. +
 → Nur die Datensätze sind im System, die zum Zeitpunkt des Abbruchs schon importiert waren.
+--
+
+Live-Import abbrechen::
++
+--
+
+[.instruction]
+Live-Import abbrechen:
+
+* Klicke im Tab *Datenimport* ganz oben rechts auf *Import abbrechen* (material:highlight_off[]). +
+→ Der Import wird angehalten. +
+*_Wichtig:_* Daten, die bereits importiert wurden, werden _nicht_ gelöscht. Lösche diese Daten bei Bedarf manuell. +
+Der Import kann nicht fortgesetzt werden. Starte bei Bedarf einen neuen Live-Import.
+--
+====
 
 [#1650]
 == Importdatei von manuellen Imports ersetzen
