update - fix icons

--- a/docs/en-gb/modules/data/pages/ElasticSync.adoc
+++ b/docs/en-gb/modules/data/pages/ElasticSync.adoc
@@ -735,7 +735,7 @@ Cancelling a live import::
 [.instruction]
 Cancelling a live import:
 
-* In the tab *Data import*, click on *Cancel import* (material:highlight_off[]) at the top right. +
+* In the tab *Data import*, click on material:close[] *Cancel import* at the top right. +
 → The import is stopped. +
 *_Important:_* Any data already imported will _not_ be deleted. If necessary, delete this data manually. +
 The import cannot be restarted. If necessary, start a new import.
