--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -735,7 +735,7 @@ Live-Import abbrechen::
 [.instruction]
 Live-Import abbrechen:
 
-* Klicke im Tab *Datenimport* ganz oben rechts auf *Import abbrechen* (material:highlight_off[]). +
+* Klicke im Tab *Datenimport* ganz oben rechts auf material:close[] *Import abbrechen*. +
 → Der Import wird angehalten. +
 *_Wichtig:_* Daten, die bereits importiert wurden, werden _nicht_ gelöscht. Lösche diese Daten bei Bedarf manuell. +
 Der Import kann nicht fortgesetzt werden. Starte bei Bedarf einen neuen Live-Import.
