CHANGE pages in preparation for the new item ui to be the default

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -58,10 +58,10 @@
 *** xref:artikel:shop-aktionen.adoc[Shop-Aktionen]
 *** xref:artikel:callisto-vorlagen.adoc[Artikelvorlagen (nicht empfohlen)]
 ** xref:artikel:neue-ui.adoc[Neue Artikel-UI (open beta)]
-*** xref:artikel:artikelsuche.adoc[Artikel suchen]
-*** xref:artikel:artikel-manuell-anlegen.adoc[Artikel und Varianten manuell anlegen]
-*** xref:artikel:detailansicht.adoc[Detailansicht: Gestaltung]
-*** xref:artikel:verzeichnis.adoc[Detailansicht: Verzeichnis der Datenfelder]
+*** xref:artikel:artikelsuche.adoc[Artikel im Backend suchen]
+*** xref:artikel:artikel-manuell-anlegen.adoc[Neue Artikel anlegen]
+*** xref:artikel:detailansicht.adoc[Detailansicht gestalten]
+*** xref:artikel:verzeichnis.adoc[Verzeichnis der Datenfelder]
 *** xref:artikel:group-functions.adoc[Massenbearbeitung]
 *** xref:artikel:multipack-paket-set.adoc[Multipacks und Artikelpakete]
 ** xref:artikel:faq-pim.adoc[FAQ: Artikelverwaltung]
