--- a/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
+++ b/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
@@ -1,4 +1,4 @@
-= Artikel und Varianten manuell anlegen (neue Artikel-UI)
+= Neue Artikel anlegen (neue Artikel-UI)
 :keywords: Neue Artikel-UI, Artikel » Artikel-UI, Artikel erstellen, Artikeldaten erstellen, Artikel anlegen, Artikeldaten anlegen, Variante erstellen, Variantendaten erstellen, Variante anlegen, Variantendaten anlegen, Artikelanlage, Artikel anlage, Artikel manuell anlegen, Artikel manuell erstellen, Neuer Artikel, Neue Artikel, Neue Variante, Neue Varianten, Neues Produkt, Neue Produkte, Variantenanlage, Varianten anlage, Variante anlage, Artikelerstellung
 :description: Erfahre, wie du Artikel und Varianten manuell erstellst.
 :id: KTXPUX4
