--- a/docs/en-gb/modules/data/partials/import-live-import.adoc
+++ b/docs/en-gb/modules/data/partials/import-live-import.adoc
@@ -65,8 +65,8 @@ The live import allows you to see the import progress in real time in the tab *D
 Starting a live import:
 
 . Go to *Data » Import » [Open import]*.
-. In the toolbar, click on *Run live import* (material:play-circle_outline[role="grey"]). +
-*_Tip:_* Even quicker: In the import overview, find the import. On the right, click on *Run import* (material:play-circle[role="grey"]). +
+. In the toolbar, click on *Run live import* (material:play-circle[role="grey"]). +
+*_Tip:_* Even quicker: In the import overview, find the import. On the right, click on *Run live import* (material:play-circle_outline[role="grey"]). +
 → a new browser tab opens. plentymarkets and the tab *Data import* are shown. +
 *_No new tab?_* Then you are probably using a pop-up blocker. Allow pop-ups for your system to continue. +
 → The data is imported. +
