--- a/docs/de-de/modules/daten/partials/import-live-import.adoc
+++ b/docs/de-de/modules/daten/partials/import-live-import.adoc
@@ -38,7 +38,7 @@ Der Import läuft im Hintergrund.
 Import starten:
 
 . Öffne das Menü *Daten » Import » [Import öffnen]*.
-. Klicke in der Symbolleiste auf *Import ausführen* (material:play_circle[role="blue"]). +
+. Klicke in der Symbolleiste auf *Import ausführen* (material:play_circle_outline[role="blue"]). +
 *_Tipp:_* Noch schneller geht es, wenn du in der Importübersicht in der Zeile des Imports auf *Import ausführen* (material:play-circle[role="darkGrey"]) klickst. +
 → Die Daten werden importiert. +
 *_Wichtig:_* Der Import läuft im Hintergrund.
@@ -65,8 +65,8 @@ Beim Live-Import kannst du den Fortschritt des Import in Echtzeit im Tab *Dateni
 Live-Import starten:
 
 . Öffne das Menü *Daten » Import » [Import öffnen]*.
-. Klicke in der Symbolleiste auf *Live-Import ausführen* (material:play_circle_outline[role="blue"]). +
-*_Tipp:_* Noch schneller geht es, wenn du in der Importübersicht in der Zeile des Imports auf *Live-Import ausführen* (material:play_circle_outline[role="darkGrey"]) klickst. +
+. Klicke in der Symbolleiste auf *Live-Import ausführen* (material:play_circle[role="blue"]). +
+*_Tipp:_* Noch schneller geht es, wenn du in der Importübersicht in der Zeile des Imports auf *Live-Import ausführen* (terra:play_circle_outline[role="grey"]) klickst. +
 → Ein neues Browser-Tab wird geöffnet. plentymarkets und das Tab *Datenimport* werden angezeigt. +
 *_Kein neues Tab?_* Dann hast du wahrscheinlich einen Pop-up-Blocker im Einsatz. Erlaube Pop-ups für dein System und es kann losgehen. +
 → Die Daten werden importiert. +
