--- a/docs/de-de/modules/daten/partials/import-live-import.adoc
+++ b/docs/de-de/modules/daten/partials/import-live-import.adoc
@@ -7,7 +7,7 @@ Du hast zwei Möglichkeiten, die Datei zu importieren:
 
 [cols="1,3a"]
 |===
-| Import (material:play_circle_filled[role="blue"])
+| Import (material:play_circle_outline[role="blue"])
 | Der Import läuft im Hintergrund.
 
 * *_Vorteil:_* Du kannst auch große Datenmengen importieren. +
@@ -39,7 +39,7 @@ Import starten:
 
 . Öffne das Menü *Daten » Import » [Import öffnen]*.
 . Klicke in der Symbolleiste auf *Import ausführen* (material:play_circle_outline[role="blue"]). +
-*_Tipp:_* Noch schneller geht es, wenn du in der Importübersicht in der Zeile des Imports auf *Import ausführen* (material:play-circle[role="darkGrey"]) klickst. +
+*_Tipp:_* Noch schneller geht es, wenn du in der Importübersicht in der Zeile des Imports auf *Import ausführen* (icon:play-circle[role="grey"]) klickst. +
 → Die Daten werden importiert. +
 *_Wichtig:_* Der Import läuft im Hintergrund.
 . Öffne das Menü, in das die Daten importiert wurden.
@@ -66,7 +66,7 @@ Live-Import starten:
 
 . Öffne das Menü *Daten » Import » [Import öffnen]*.
 . Klicke in der Symbolleiste auf *Live-Import ausführen* (material:play_circle[role="blue"]). +
-*_Tipp:_* Noch schneller geht es, wenn du in der Importübersicht in der Zeile des Imports auf *Live-Import ausführen* (terra:play_circle_outline[role="grey"]) klickst. +
+*_Tipp:_* Noch schneller geht es, wenn du in der Importübersicht in der Zeile des Imports auf *Live-Import ausführen* (material:play_circle_outline[role="grey"]) klickst. +
 → Ein neues Browser-Tab wird geöffnet. plentymarkets und das Tab *Datenimport* werden angezeigt. +
 *_Kein neues Tab?_* Dann hast du wahrscheinlich einen Pop-up-Blocker im Einsatz. Erlaube Pop-ups für dein System und es kann losgehen. +
 → Die Daten werden importiert. +
