add messenger permission

--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -52,10 +52,11 @@ Wenn Benutzer:innen vom Typ *Backend* mit dem Messenger arbeiten sollen, muss ei
 :rights-purpose: Nachrichten im Messenger sehen und erstellen
 :right-one: pass:quotes[*CRM > Nachricht > Anzeigen*]
 :right-two: pass:quotes[*CRM > Nachricht > Erstellen*]
-:right-three: pass:quotes[*Kommentare > Anzeigen*]
-:right-four: pass:quotes[*Kommentare > Erstellen*]
-:right-five: pass:quotes[*Einrichtung > Tag > Anzeigen*]
-:right-six: pass:quotes[*Einrichtung > Tag > Erstellen*]
+:right-three: pass:quotes[*CRM > Messenger > Bearbeiten*]
+:right-four: pass:quotes[*Kommentare > Anzeigen*]
+:right-five: pass:quotes[*Kommentare > Erstellen*]
+:right-six: pass:quotes[*Einrichtung > Tag > Anzeigen*]
+:right-seven: pass:quotes[*Einrichtung > Tag > Erstellen*]
 
 include::_includes:partial$rights.adoc[]
 
