Added info about product updates at idealo

--- a/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/idealo-einrichten.adoc
@@ -54,6 +54,24 @@ Kläre vor dem Einrichten in plentymarkets mit idealo, wie Artikeldaten übertra
 //end::table-comparison[]
 |===
 
+[#artikeldaten-exportieren-api]
+=== Änderung von Artikeldaten beim Artikelexport per API
+
+Wenn du den Artikelexport per API nutzt, um Artikeldaten an idealo zu übertragen, werden immer dann Angebote auf idealo erstellt, wenn es zu diesem Artikel noch kein Angebot auf idealo gibt - zum Beispiel, wenn du einen Artikel zum ersten Mal an idealo überträgst oder wenn ein Artikel wieder auf Lager ist, nachdem der Bestand *0* war. +
+
+Danach werden Artikel auf idealo nur noch aktualisiert, wenn sich der Preis oder der Bestand des Artikels ändert. In diesem Fall werden die folgenden Daten bei idealo aktualisiert: +
+
+* *SKU*
+* *Preis*
+* *Bestand*
+* *Lieferzeit*
+* *idealo Direktkauf (ja/nein)*
+
+
+*_Hinweis:_* Alle anderen Änderungen an Artikeldaten werden _nicht_ automatisch zu idealo übertragen. Wenn sich also Artikeltexte, Merkmale, Versandkosten etc. ändern, gibt es derzeit keine Möglichkeit, diese Änderungen automatisch an idealo zu übertragen.
+
+→ Wende dich in diesem Fall an unser Support-Team im link:https://forum.plentymarkets.com/[plentymarkets Forum^]. Unser Support wird dir dabei helfen, diese Artikeldaten an idealo zu übertragen.
+
 [#2400]
 == Benötigte Plugins installieren
 
