--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -1346,7 +1346,7 @@ Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorie
 | `Auftrag im Webshop aufrufen`
 |Öffnet die URL des Auftrags in deinem Webshop.
 | `order.access_key`
-|
+|$OrderAccessKey
 
 | `Barcode-ID`
 |
@@ -2085,7 +2085,7 @@ Der QR-Code wird in der E-Mail an deine Kund:innen als URL ausgegeben. Nach eine
 | `Paketnummernliste`
 |Paketnummern bzw. Tracking-Nummern werden nach erfolgreicher Auftragsanmeldung beim Versanddienstleister im Auftrag im Tab *Einstellungen* gespeichert.
 | `order.formattedShipping.packageNumberList`
-|
+|$PackageCount
 
 | `Paketgewicht`
 |Paketgewicht und Einheit wie im Menü *Aufträge » Versand-Center* im Bereich *Versandpakete* gespeichert.
@@ -2675,7 +2675,7 @@ Alternativ findest du die gespeicherte IBAN im Menü *Einrichtung » Einstellung
 | `URL zum Bestätigen der E-Mail-Adresse`
 |Gibt die URL zum Bestätigen der E-Mail-Adressänderung des Kontakts aus.
 | `globals.account.newCustomerEmail`
-|
+|$NewCustomerEmail
 
 | `URL zum neuen Passwort`
 |Gibt die URL zu einem Formular zum Erstellen eines neuen Passworts aus. Dort geben Kund:innen ihre E-Mail-Adresse ein.
