--- a/docs/de-de/modules/crm/pages/crm.adoc
+++ b/docs/de-de/modules/crm/pages/crm.adoc
@@ -26,7 +26,7 @@ Richte einen xref:crm:newsletter-versenden.adoc#[Newsletter]-Dienst in deinem Sy
 * xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Typ erstellen]
 * xref:crm:kontakt-erstellen.adoc#[Kontakt erstellen]
 * xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten]
-* xref:crm:vorbereitende-einstellungen.adoc#rabattsystem-nutzen[Rabattsystem]
+* xref:crm:vorbereitende-einstellungen.adoc#rabattsystem-nutzen[Rabattsystem nutzen]
 * xref:crm:op-liste.adoc#[Offene Posten anzeigen]
 * xref:crm:firmen.adoc#[Firmen verwalten]
 ======
