--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -509,10 +509,10 @@ Die xref:payment:beta-zahlungen-verwalten-neu.adoc#[Zahlung] hat eine direkte Ve
 [#benachrichtigung-neue-nachricht]
 == Benachrichtigungen über neue Nachrichten 
 
-Wenn du das Menü *CRM » Messenger (Testphase*) öffnest siehst du bei Eingang neuer Nachrichten die Anzahl der neuen Nachrichten über das Symbol material:notifications[]. Mit einem Klick auf material:notifications[] öffnet sich das Benachrichtigungsfenster.
+Wenn du das Menü *CRM » Messenger (Testphase*) öffnest, siehst du bei Eingang neuer Nachrichten die Anzahl der neuen Nachrichten am Symbol material:notifications[]. Mit einem Klick auf material:notifications[] öffnet sich das Benachrichtigungsfenster.
 
 Im Bereich material:info[] *Neue Messenger-Nachricht* siehst du den Betreff der Nachricht und wann die Nachricht gesendet wurde. Klicke auf material:link[] *Nachricht öffnen*, um die Nachricht im Messenger zu öffnen. +
-Klicke auf material:more_vert[] und dann auf material:delete[] *Schließen*, um die Benachrichtigung für diese Nachricht zu entfernen. Die Zahl bei dem Symbol material:notifications[] reduziert sich also um 1.
+Wenn du die Benachrichtigung für diese Nachricht entfernen möchtest, klicke auf material:more_vert[] und dann auf material:delete[] *Schließen*. Die Zahl bei dem Symbol material:notifications[] reduziert sich dann um 1.
 
 [#auf-nachricht-antworten]
 == Auf eine bestehende Nachricht antworten
