UPDATE show stock

--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -114,7 +114,7 @@ On the right-hand side of the order overview, further functions are available. T
 
 | *Show stock*
 |material:warehouse[]
-|Shows the stock of the respective order. Expand the columns of the variations to see further information on the stock as well as on possible reorders.
+|Shows the stock and possible reorders of an order. Expand (material:chevron_right) the columns to see further information on the stock of the warehouse.
 
 | *Delete order*
 |material:delete[]
