--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -114,7 +114,7 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 
 | *Warenbestand ermitteln*
 |material:warehouse[]
-|Zeigt den Warenbestand des jeweiligen Auftrags an. Klappe die Zeilen der Varianten aus, um weitere Informationen zum Warenbestand sowie zu eventuellen Nachbestellungen zu sehen.
+|Zeigt den Warenbestand sowie eventuelle Nachbestellungen eines Auftrags an. Klappe die Zeilen aus (material:chevron_right[]), um weitere Informationen zum Warenbestand des Lagers zu sehen.
 
 | *Auftrag löschen*
 |material:delete[]
