ADD status change

--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -102,7 +102,7 @@ Rechts in der Auftragsübersicht sind je nach Auftragstyp weitere Funktionen üb
 
 | *Status ändern*
 |material:repeat_one[]
-|Ermöglicht das Ändern des Status für einen Auftrag. Wähle einen neuen Status aus der Dropdown-Liste.
+|Ermöglicht das Ändern des Status für einen Auftrag. Wähle einen anderen Status aus der Dropdown-Liste.
 
 | *Warenausgang buchen*
 |material:output[]
