ADD address to be shown (#1240)
* ADD address to be shown

* ADJUST address selection

--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -490,8 +490,14 @@ Settings
 | **Scan each item individually** = If more than one copy of the item is picked, each item must be scanned individually. +
 1-100 = After the selected quantity of items was scanned, the rest is added automatically.
 
+| *Address to be shown*
+|Select whether the invoice address (default setting) or the delivery address of the order should be displayed in the detail view.
+
 | **Close pick list automatically**
 |Activate to close incomplete pick lists in the process automatically.
+
+| *Automatically assign processing status to pick list*
+|Sets the pick list in the status *In progress*. This setting is active by default.
 
 | **Display execute button**
 |Activate to display a button in the process that allows users to jump to a different procedure.
