--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -231,6 +231,14 @@ Die folgenden Felder werden beim Bestandsabgleich exportiert:
 * Bilderexport, wie im Tab *Bilder* des Artikels eingestellt
 |===
 
+[#ablauf-bestellung]
+== Ablauf einer Bestellung bei Kaufland
+
+* Deine Artikel werden bei Kaufland gelistet. Der Name deines Unternehmens wird an deinen Artikeln angezeigt.
+* Kund:innen geben eine Bestellung auf Kaufland auf.
+* Kund:innen zahlen an Kaufland.
+* Der Auftrag wird mit Status *[5] Freigabe Versand* in plentymarkets importiert.
+
 [#225]
 === Modell Fiktiver Lieferer
 
