--- a/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
+++ b/docs/de-de/modules/artikel/pages/multipacks-pakete-sets-verwalten.adoc
@@ -62,9 +62,7 @@ a| *_Beispiel_*: Eine Fußballuniform bestehend aus einem Trikot, Shorts und Soc
 * Bei der Bestellung können Endkunden für jeden Artikel die gewünschte Variante wählen (Größe, Farbe).
 * Die Hauptvariante selbst ist virtuell, kann also nicht verkauft werden.
 
-*_Hinweis_*: Es ist möglich, Artikel-Sets im link:https://marketplace.plentymarkets.com/plugins/sales/online-shops/ceres_4697[plentyShop LTS] Version 5.0 und höher zu verkaufen.
-Niedrigere Versionen von plentyShop LTS unterstützen die Set-Funktion nicht.
-Die Set-Funktion ist nur für den plentyShop vorgesehen.
+*_Hinweis_*: Die Set-Funktion ist nur für den plentyShop vorgesehen.
 Es ist nicht möglich, Artikel-Sets auf Märkten wie Amazon und eBay zu verkaufen.
 |Set
 |===
@@ -362,8 +360,6 @@ a| * S und blau
 .Set-Funktion ist nur für den plentyShop vorgesehen
 ====
 
-* Die Set-Funktion ist mit link:https://marketplace.plentymarkets.com/plugins/sales/online-shops/ceres_4697[plentyShop LTS] Version 5.0 und höher kompatibel.
-Niedrigere Versionen von plentyShop LTS unterstützen die Set-Funktion nicht.
 * Es ist _nicht möglich_, Artikel-Sets auf Märkten wie Amazon und eBay zu verkaufen.
 * Es ist _nicht möglich_, Artikel-Sets mit POS zu verkaufen oder mit der App zu kommissionieren.
 
@@ -622,14 +618,6 @@ Erläuterungen zu diesen Einstellungen findest du im xref:artikel:artikel-verwal
 
 [#4400]
 === Sets im plentyShop darstellen
-
-[IMPORTANT]
-.Voraussetzungen
-====
-Es ist möglich, Artikel-Sets im link:https://marketplace.plentymarkets.com/plugins/sales/online-shops/ceres_4697[plentyShop LTS] Version 5.0 und höher zu verkaufen.
-Niedrigere Versionen von plentyShop LTS unterstützen die Set-Funktion nicht.
-Stelle daher sicher, dass du eine kompatible Version verwendest und xref:plugins:installierte-plugins-aktualisieren.adoc#[aktualisiere das Plugin], falls erforderlich.
-====
 
 [#4410]
 ==== Inhalt vom Typ Artikelset erstellen
