--- a/docs/de-de/modules/auftraege/pages/gutscheine.adoc
+++ b/docs/de-de/modules/auftraege/pages/gutscheine.adoc
@@ -529,14 +529,13 @@ Gutscheinvorlage einrichten:
 *_Tipp:_* Nach erfolgreichem Speichern wird eine Erfolgsmeldung angezeigt. Klicke auf *Vorschau anzeigen* (icon:eye[role="blue"]), um einen Eindruck davon zu bekommen, wie der Gutschein aussehen wird und korrigiere die Werte, bis du mit dem Ergebnis zufrieden bist.
 
 [#gutschein-erzeugen]
-=== Gutschein erzeugen (ab plentyShop LTS-Version 5)
+=== Gutschein erzeugen
 
 Der Prozess zum Kauf eines Gutscheins unterscheidet sich nicht vom Kaufprozess eines normalen Artikels. Sobald Kund:innen den Gutschein erworben haben, können sie die Gutscheintexte für die Gutscheinvorlage speichern.
 
 [TIP]
 Um einen persönlichen Text zu speichern, müssen Kund:innen in ihrem *Mein Konto*-Bereich in der Auftragshistorie in den Bestelldetails noch einmal auf *Gutschein bearbeiten* klicken. Personen, die als Gast bestellt haben, können den Gutschein über die Bestellbestätigungsseite anpassen, da sie ja kein Konto in deinem plentyShop haben. Schreibe am besten einen kurzen Hinweis in der Beschreibung des Gutscheinartikels, um die Kund:innen bzw. die Personen, die als Gast bestellen, darüber zu informieren. +
-Beachte, dass du diese Funktion ab link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop LTS^]-Version *5* nutzen kannst. +
-Zudem ist es notwendig, dass du die xref:webshop:shop-builder.adoc#97[Bestellbestätigungsseite im ShopBuilder] angelegt und verknüpft hast.
+Beachte, dass du die xref:webshop:shop-builder.adoc#97[Bestellbestätigungsseite im ShopBuilder] angelegt und verknüpft hast.
 
 Nachdem Kund:innen den Gutschein gekauft haben, können sie die Gutscheintexte wie folgt anpassen:
 
