--- a/docs/en-gb/modules/item/pages/combining-products.adoc
+++ b/docs/en-gb/modules/item/pages/combining-products.adoc
@@ -55,9 +55,7 @@ a| *_Example_*: A football uniform composed of a jersey, shorts and socks. End c
 * While placing an order, the end customer chooses the appropriate variation (size, colour) for each item.
 * The main variation is virtual. This means that the main variation cannot be sold.
 
-*_Note_*: It's possible to sell item sets with link:https://marketplace.plentymarkets.com/en/plugins/sales/online-shops/ceres_4697[plentyShop LTS] version 5.0 and higher.
-Lower versions of plentyShop LTS do not support the set function.
-The set function is only intended for the plentyShop.
+*_Note_*: The set function is only intended for the plentyShop.
 It’s not possible to sell item sets on marketplaces like Amazon and eBay.
 |Set
 |====
@@ -355,8 +353,6 @@ a| * S and blue
 .Set function is only intended for the plentyShop
 ====
 
-* The set function is compatible with link:https://marketplace.plentymarkets.com/en/plugins/sales/online-shops/ceres_4697[plentyShop LTS] version 5.0 and higher.
-Lower versions of plentyShop LTS do not support the set function.
 * It's _not possible_ to sell item sets on marketplaces like Amazon and eBay.
 * It's _not possible_ to sell item sets with POS or pick them with the app.
 
@@ -615,14 +611,6 @@ You can find explanations of these settings in the xref:item:managing-items.adoc
 
 [#4400]
 === Displaying sets in the plentyShop
-
-[IMPORTANT]
-.Requirements
-====
-It's possible to sell item sets with link:https://marketplace.plentymarkets.com/en/plugins/sales/online-shops/ceres_4697[plentyShop LTS] version 5.0 and higher.
-Lower versions of plentyShop LTS do not support the set function.
-Therefore, make sure you are using a compatible version and xref:plugins:updating-installed-plugins.adoc#[update the plugin] if necessary.
-====
 
 [#4410]
 ==== Creating content of the type "Item set"
