--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -103,7 +103,7 @@ This setting is not relevant for new Kaufland accounts which can be added in the
 |Select whether the item export to Kaufland.de should be activated. +
 
 *_Note:_* You can *deactivate* this setting if you export your items to Kaufland using <<#catalogue-export, catalogues>>. +
-However, make sure that all of the variations which you want to offer on Kaufland are <<#link-variation-to-catalogue-category, mapped in a Kaufland catalogue>> before you deactivate this setting. If a variation is not mapped in a Kaufland catalogue, then it will not be exported to Kaufland.
+However, make sure that all of the variations which you want to offer on Kaufland are <<#link-variations-to-product-category, mapped in a Kaufland catalogue>> before you deactivate this setting. If a variation is not mapped in a Kaufland catalogue, then it will not be exported to Kaufland.
 
 | *Export only items with flags*
 a| * *All items* = All items are exported.
@@ -137,7 +137,7 @@ a| * *Yes* (default setting) = Offers are updated once per hour and once per day
 * *No* = The offer update is deactivated. +
 
 *_Note:_* You can *deactivate* this setting if you export your items to Kaufland using <<#catalogue-export, catalogues>>. +
-However, make sure that all of the variations which you want to offer on Kaufland are <<#link-variation-to-catalogue-category, mapped in a Kaufland catalogue>> before you deactivate this setting. If a variation is not mapped in a Kaufland catalogue, then it will not be exported to Kaufland.
+However, make sure that all of the variations which you want to offer on Kaufland are <<#link-variations-to-product-category, mapped in a Kaufland catalogue>> before you deactivate this setting. If a variation is not mapped in a Kaufland catalogue, then it will not be exported to Kaufland.
 
 | *Generate cache file (Inventory)*
 a| Select *Yes* or *No*. +
@@ -231,6 +231,14 @@ The following fields are exported during stock synchronisation:
 * image export selected in the item's *Images* tab
 |===
 
+[#workflow-order]
+== Workflow of a Kaufland order
+
+* Your items are listed on Kaufland. The name of your company is shown with your items.
+* Customers place an order on Kaufland.
+* Customers make their payments to Kaufland.
+* The order is imported into plentymarkets with status *[5] Cleared for shipping*.
+
 [#225]
 === Deemed Supplier Model
 
@@ -320,7 +328,7 @@ include::partial$variation-availability.adoc[]
 
 // Web API required!
 
-[#link-variation-to-catalogue-category]
+[#link-variations-to-product-category]
 === Linking variations to a Kaufland product category
 
 *_Note:_* You only have to link your variations to Kaufland product categories if you use the <<#catalogue-export, catalogue export>> to transfer items to Kaufland.
@@ -555,6 +563,7 @@ Every market structures item data differently. As such, there are some particula
 ===== Stock buffer
 
 In the catalogues for Kaufland, you can use a *stock buffer*. A stock buffer is the amount of an item that should not be sold, but kept as a buffer. +
+
 In order to use a stock buffer for Kaufland, map the data field *Stock buffer* in your Kaufland catalogues. The stock buffer is applied when the stock is updated and when a new offer is created.
 
 Recommended mappings for the data field *Stock buffer*:
