--- a/docs/de-de/modules/auftraege/pages/auftragsherkunft-neu.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragsherkunft-neu.adoc
@@ -9,7 +9,7 @@ Ist die Einstellung “Sichtbar in Leads” hier sinnvoll?
 Werden Benutzerrechte benötigt?
 noch gültig, dass man irgendwann keine neuen herkünfte mehr anlegen kann?
 
-// in nav.adoc einbinden (für neue Order UI)
+in nav.adoc einbinden (für neue Order UI)
 ////
 
 Omni-Channel-Verkauf mit plentymarkets bedeutet, dass du deine Artikel über eine Vielzahl von Kanälen anbieten und so Aufträge aus den verschiedensten Quellen generieren kannst.
@@ -61,7 +61,7 @@ Die folgenden Spalten stehen für die Übersicht der Auftragsherkünfte zur Verf
 *_Hinweis:_* Wenn alle freien IDs für manuell angelegte Auftragsherkünfte vergeben sind, ist die Schaltfläche *Neue Herkunft erstellen (material:add[]) nicht mehr sichtbar, da keine neuen Herkünfte hinzugefügt werden können.
 
 | *Name*
-|Zeigt den Namen der Herkunft an. Der Name wird im System angezeigt, zum Beispiel bei der Auftragssuche. Der Name kann jederzeit geändert werden.
+|Zeigt den Namen der Herkunft an. Mit Klick auf den Pfeil kannst du die Herkünfte der Tabelle alphabetisch nach Namen sortieren. Der Name wird im System angezeigt, zum Beispiel bei der Auftragssuche. Der Name kann jederzeit geändert werden.
 
 | *Interner Name*
 |Zeigt den internen Namen an. Der interne Name ist nicht änderbar und wird nicht im System angezeigt. Nur fest hinterlegte Auftragsherkünfte erhalten einen internen Namen, manuell angelegte Herkünfte nicht.
