--- a/docs/de-de/modules/auftraege/pages/auftragsherkunft.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragsherkunft.adoc
@@ -52,7 +52,7 @@ Die folgenden Spalten stehen für die Übersicht der Auftragsherkünfte zur Verf
 *_Hinweis:_* Wenn alle freien IDs für manuell angelegte Auftragsherkünfte vergeben sind, ist die Schaltfläche *Neue Herkunft erstellen (material:add[]) nicht mehr sichtbar, da keine neuen Herkünfte hinzugefügt werden können.
 
 | *Name*
-|Zeigt den Namen der Herkunft an. Der Name wird im System angezeigt, zum Beispiel bei der Auftragssuche. Der Name kann jederzeit geändert werden.
+|Zeigt den Namen der Herkunft an. Mit Klick auf den Pfeil kannst du die Herkünfte der Tabelle alphabetisch nach Namen sortieren. Der Name wird im System angezeigt, zum Beispiel bei der Auftragssuche. Der Name kann jederzeit geändert werden.
 
 | *Interner Name*
 |Zeigt den internen Namen an. Der interne Name ist nicht änderbar und wird nicht im System angezeigt. Nur fest hinterlegte Auftragsherkünfte erhalten einen internen Namen, manuell angelegte Herkünfte nicht.
