--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -47,8 +47,6 @@ Wenn Benutzer:innen vom Typ *Backend* mit dem Messenger arbeiten sollen, muss ei
 [#benutzerrechte-backend-benutzer]
 === Rechte für Backend-Benutzer:innen vergeben
 
-// TODO: Berechtigungen prüfen
-
 :rights-purpose: Nachrichten im Messenger sehen und erstellen
 :right-one: pass:quotes[*CRM > Nachricht > Anzeigen*]
 :right-two: pass:quotes[*CRM > Nachricht > Erstellen*]
@@ -134,7 +132,8 @@ Wähle nach Eingabe der Zugangsdaten die Verschlüsselung und gib die Absender-E
 
 *_Hinweis für Postfächer bei mailbox.org:_* Gib den Port *465* ein und wähle als Verschlüsselung die Einstellung *SSL*.
 
-// TODO: Aktiviere (material:check_box[role=skyBlue]) die Checkbox, um das Standardpostfach für alle Nachrichten zu wählen.
+Im Bereich *Standard-Posteingang* kannst du die Option *Als Standard-Posteingang festlegen* aktivieren (material:check_box[role=skyBlue]), damit dieser Posteingang beim Schreiben neuer Nachrichten aus dem Messenger vorausgewählt ist. 
+
 
 ////
 TODO: ggf. neue Tabelle einfügen mit aktuellen Zahlen analog zu dieser Tabelle hier: https://knowledge.plentymarkets.com/crm/e-mails-versenden#200
@@ -159,6 +158,8 @@ Die Vorlage enthält die folgenden Variablen:
 * ID der Konversation
 ** Die Variable *ID der Konversation* dient als eindeutiges Kennzeichen, damit die Nachricht immer korrekt zugeordnet werden kann. Daher sollte diese Variable _nicht_ aus der Vorlage entfernt werden.
 ====
+
+// TODO: was passiert nun mit den Variablen im EmailBuilder? Was enthält nun die default template "Messenger default"?
 
 Wenn du in diesem Schritt _nicht_ die Standardvorlage für den Messenger, sondern eine eigene E-Mail-Vorlage verwenden möchtest, stelle sicher, dass die E-Mail-Vorlage, die du im Menü *CRM » EmailBuilder (Testphase)* erstellst, mindestens die folgenden Variablen enthält:
 
@@ -221,8 +222,8 @@ Nachricht erstellen:
 . Klicke oben links auf material:add[] *Neue Nachricht*.
 . Gib im Feld *Empfänger hinzufügen...* einen Wert ein und wähle dann den passenden Wert aus der Vorschlagsliste. +
 *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Empfänger:innen mit dieser Auftrags-ID oder Kontakt-ID vorgeschlagen (siehe <<#image-messenger-new-message-suggestion-list>>).
-// . Wähle eine Vorlage aus der Liste.
-// . Wähle die Vorlagensprache.
+. Wähle eine Vorlage aus der Liste.
+. Wähle die Vorlagensprache.
 . Gib den Betreff deiner Nachricht im Feld *Betreff* ein.
 . Wähle den Posteingang aus der Dropdown-Liste.
 . Gib im Textfeld die Nachricht ein.
@@ -241,22 +242,22 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 |====
 |Einstellung |Erläuterung
 
-|[#intable-recipients]*Empfänger:innen*
-|Gib hier einen Namen oder eine ID ein und wähle dann den passenden Wert aus der Vorschlagsliste (siehe <<#image-messenger-new-message-suggestion-list>>).
+|[#intable-recipients]*Empfänger:in*
+|Gib hier einen Namen oder eine ID ein und wähle dann den passenden Wert aus der Vorschlagsliste (siehe <<#image-messenger-new-message-suggestion-list>>). Du kannst mehrere Empfänger:innen hinzufügen.
 
-// |[#intable-template]*Vorlage*
-// |Wähle eine Vorlage aus der Liste. Du siehst in der Liste alle Vorlagen, die du im xref:crm:emailbuilder.adoc#[EmailBuilder] erstellt hast. +
-// *_Tipp:_* Gib mindestens 3 Buchstaben ein, damit dir eine Vorschlagsliste der bereits vorhandenen E-Mail-Vorlagen angezeigt wird. +
-// *_Hinweis:_* Wenn du auf <<#intable-refresh-template, Vorlage laden>> klickst, wird der Inhalt der Vorlage und der in der Vorlage gespeicherte Betreff angezeigt.
+|[#intable-template]*Vorlage*
+|Wähle eine Vorlage aus der Liste. Du siehst in der Liste alle Vorlagen, die du im xref:crm:emailbuilder.adoc#[EmailBuilder] erstellt hast. +
+*_Tipp:_* Gib mindestens 3 Buchstaben ein, damit dir eine Vorschlagsliste der bereits vorhandenen E-Mail-Vorlagen angezeigt wird. +
 
-// |[#intable-template-language]*Vorlagensprache*
-// |Wähle die Vorlagensprache.
+|[#intable-template-language]*Vorlagensprache*
+|Wähle die Vorlagensprache. +
+Wenn die gewählte Sprache nicht der empfohlenen Sprache (basierend auf den Empfänger:innen) entspricht, wird ein Hinweis angezeigt.
 
-// |[#intable-refresh-template]*Vorlage laden*
-// |Mit einem Klick auf material:refresh[] lädst du den Inhalt der Vorlage neu. Zum Beispiel wird der Inhalt der gewählten Vorlage sowie der Betreff angezeigt.
+|[#intable-template-subject]*Betreff*
+|Gib den Betreff ein. Dies ist ein Pflichtfeld.
 
 |[#intable-inbox]*Posteingang*
-|Wähle einen Posteingang aus der Dropdown-Liste. In der Liste werden die Namen der Posteingänge angezeigt, für die du jeweils den <<#assistent-durchlaufen, Assistenten durchlaufen>> hast.
+|Wähle einen Posteingang aus der Dropdown-Liste. In der Liste werden die Namen der Posteingänge angezeigt, für die du jeweils den <<#assistent-durchlaufen, Assistenten *Messenger-Konfiguration* durchlaufen>> hast.
 
 |[#intable-text-field]*Textfeld*
 |Gib hier den Inhalt der Nachricht ein.
@@ -296,7 +297,7 @@ Klicke auf material:pause_circle[], um den Timer anzuhalten bzw. auf material:pl
 |Mit einem Klick auf material:forward_to_inbox[role=skyBlue] *SENDEN* wird die Nachricht gesendet. +
 *_Hinweis:_* Wenn du für die Nachricht Minuten erfasst, ändert sich der Name der Schaltfläche in material:visibility_off[role=skyBlue] *ERFASSEN UND SENDEN*. Wenn du die Nachricht flüsterst, ändert sich der Name der Schaltfläche in material:visibility_off[role=skyBlue] *FLÜSTERN*.
 
-// TODO: hier noch die weiteren Szenarien auflisten. (ERFASSEN und SENDEN etc.
+// TODO: hier noch die weiteren Szenarien auflisten. (ERFASSEN und SENDEN etc.)
 
 |====
 
@@ -517,17 +518,13 @@ Wenn du die Benachrichtigung für diese Nachricht entfernen möchtest, klicke au
 [#auf-nachricht-antworten]
 == Auf eine bestehende Nachricht antworten
 
-Suche die <<#konversation-suchen, Konversation>>, die die Nachricht enthält, auf die du antworten möchtest. Klicke dann auf die Nachricht, um darauf zu antworten. Beim Antworten auf eine bestehende Nachricht siehst du alle Empfänger:innen, die diese Nachricht erhalten. Du kannst weitere Empfänger:innen hinzufügen.
+Suche die <<#konversation-suchen, Konversation>>, die die Nachricht enthält, auf die du antworten möchtest. Klicke dann auf die Nachricht, um darauf zu antworten. Beim Antworten auf eine bestehende Nachricht siehst du alle Empfänger:innen, die diese Nachricht erhalten. Du kannst weitere Empfänger:innen hinzufügen. Falls gewünscht, wähle aus der Dropdown-Liste *Vorlage* eine Vorlage und eine Vorlagensprache.
 
-// Falls gewünscht, wähle aus der Dropdown-Liste *Vorlage* eine Vorlage und eine Vorlagensprache.
-
-Der einzige Unterschied zum <<#nachricht-erstellen, Erstellen einer Nachricht>> ist, dass du beim Antworten auf eine bestehende Nachricht über das Symbol material:more_vert[] den Betreff ein- und ausblenden kannst (siehe <<#image-messenger-reply-to-message>>). 
+Der einzige Unterschied zum <<#nachricht-erstellen, Erstellen einer Nachricht>> ist, dass du beim Antworten auf eine bestehende Nachricht über das Symbol material:more_vert[] den Betreff und die Vorlagenliste ein- und ausblenden kannst (siehe <<#image-messenger-reply-to-message>>). 
 
 [[image-messenger-reply-to-message]]
 .Auf eine bestehende Nachricht antworten
 image::crm:messenger-auf-nachricht-antworten.png[width=640, height=360]
-
-// TODO: Screenshot erneuern
 
 Du kannst den Betreff anpassen, wenn die Option *Betreff* aktiviert ist (material:toggle_on[role=skyBlue]). Wenn du die Option *Betreff* _nicht_ aktiviert hast (material:toggle_off[]), ist das Feld *Betreff* beim Antworten auf die Nachricht nicht sichtbar. Der aktuell gewählte Betreff wird dann beim Antworten auf die Nachricht automatisch übernommen.
 
@@ -553,8 +550,6 @@ Listenansicht: im linken Bereich werden alle gefundenen Konversationen als Liste
 Nachrichten im Messenger werden nach Stichworten bzw. textlichen Parametern, die von deinem plentymarkets System automatisch erkannt werden, zugeordnet.
 
 Beachte die Stichworte, die zu einer Zuordnung führen, in <<#table-assignment-messenger>>. Groß- und Kleinbuchstaben spielen _keine_ Rolle.
-
-
 
 [[table-assignment-messenger]]
 .Zuordnungsparameter und mögliche Schreibweisen
